flux/authentik/security/cnp-kong.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: authentik-mtls-kong
spec:
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": "authentik"
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "kong"
      authentication:
        mode: "required"
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
            - port: "9300"
              protocol: TCP
